fixed menu button not sliding completely out of frame on tablet screens

--- a/src/sass/_right-rail.scss
+++ b/src/sass/_right-rail.scss
@@ -23,7 +23,7 @@
 		}
 
 		&.out {
-			transform: translateY(-125%);
+			transform: translateY(-150%);
 		}
 	}
 
